@@ -65,7 +65,8 @@ class RubyGemTestCase < Test::Unit::TestCase
 
   def setup
     super
-    @tempdir = File.join Dir.tmpdir, "test_rubygems_#{$$}"    
+
+    @tempdir = File.join Dir.tmpdir, "test_rubygems_#{$$}"
     @gemhome = File.join @tempdir, "gemhome"
     @gemcache = File.join(@gemhome, "source_cache")
     @usrcache = File.join(@gemhome, ".gem", "user_cache")
@@ -74,6 +75,8 @@ class RubyGemTestCase < Test::Unit::TestCase
 
     ENV['GEMCACHE'] = @usrcache
     Gem.use_paths(@gemhome)
+
+    Gem.configuration[:verbose] = true
   end
 
   def teardown
